plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.6'
    id 'io.spring.dependency-management' version '1.1.4'
    id "org.sonarqube" version "4.4.1.3373"
    id "jacoco"
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'
    implementation 'mysql:mysql-connector-java:8.0.33'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
    implementation 'com.mashape.unirest:unirest-java:1.3.1'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:4.0.4'
    testImplementation 'com.playtika.testcontainers:embedded-mysql:3.0.0-RC9'
}
jar{
    manifest{
        attributes 'Main-Class': 'org/example/individualbackend/IndividualBackEndApplication.java'
    }
}

sonar {
    properties {
        property "sonar.projectKey", "I499773_individual-back-end_39a8aa8d-7b35-49d1-a41e-7e33289f6d80"
        property "sonar.projectName", "Individual-Back-end"
        property "sonar.qualitygate.wait", true
        property "sonar.gradle.skipCompile", true
    }

}
//tasks.named('test') {
//    useJUnitPlatform()
//    finalizedBy jacocoTestReport
//}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}